# scion

./: BUILD.bazel  README.md
antlr/: PathPolicyConstraints.g4  generate.sh
antlr/pathpolicyconstraints/: BUILD.bazel  pathpolicyconstraints_parser.go
control/beacon/: policy.go
control/beaconing/: BUILD.bazel  extender.go
control/cmd/control/: main.go
control/config/: BUILD.bazel  config.go  fabrid.go  fabrid_test.go  sample.go
control/fabrid/: BUILD.bazel  fabrid_manager.go  fabrid_manager_test.go  mpls.go  mpls_map.go  mpls_map_test.go
control/fabrid/grpc/: BUILD.bazel  fabrid_service.go  fabrid_service_test.go  fetcher.go  fetcher_test.go
control/fabrid/grpc/mock_grpc/: mock.go
control/trust/: crypto_loader.go
daemon/cmd/daemon/: main.go
daemon/drkey/: client_engine.go
daemon/drkey/grpc/: BUILD.bazel  fetcher.go
daemon/internal/servers/: BUILD.bazel  grpc.go
demo/fabrid/: BUILD.bazel  README.md  main.go  test.py
doc/command/scion/: scion_fabrid.rst  scion_ping.rst
doc/dev/design/: FABRID.rst
docker/: BUILD.bazel  endhost.bzl
heliagate/: BUILD.bazel  main.go
heliagate/config/: BUILD.bazel  heliagate.go
heliagate/processing/: BUILD.bazel  processing.go  processor.go
heliagate/storage/: BUILD.bazel  storage.go
pkg/addr/: host.go  isdas.go
pkg/daemon/: BUILD.bazel  daemon.go  grpc.go
pkg/drkey/: drkey.go
pkg/experimental/fabrid/: BUILD.bazel  defs.go  fabrid.go  fabrid_crypto.go  fabrid_crypto_test.go
pkg/experimental/fabrid/accumulator/: BUILD.bazel  fabrid_accumulator.go
pkg/experimental/fabrid/common/: BUILD.bazel  fabrid.go
pkg/experimental/fabrid/crypto/: BUILD.bazel  fabrid_crypto.go  fabrid_crypto_test.go
pkg/experimental/fabrid/server/: server.go
pkg/experimental/helia/: BUILD.bazel  doc.go  export_test.go  helia.go  helia_test.go
pkg/experimental/heliagate/: BUILD.bazel  common.go
pkg/experimental/heliagate/config/: BUILD.bazel  config.go  heliagate.go
pkg/grpc/: dialer.go
pkg/log/: log.go
pkg/private/xtest/graph/: BUILD.bazel  graph.go
pkg/proto/control_plane/: seg_extensions.pb.go
pkg/proto/control_plane/experimental/: fabrid.pb.go  fabrid_extensions.pb.go  seg_detached_extensions.pb.go
pkg/proto/daemon/: daemon.pb.go
pkg/segment/: seg.go  unsigned_test.go
pkg/segment/extensions/digest/: digest_test.go
pkg/segment/extensions/fabrid/: BUILD.bazel  fabrid.go  fabrid_test.go
pkg/slayers/: BUILD.bazel  extn.go  pkt_helia.go  pkt_helia_test.go
pkg/slayers/extension/: BUILD.bazel  fabrid.go  fabrid_control.go  fabrid_control_test.go  fabrid_test.go  identifier.go  identifier_test.go
pkg/snet/: BUILD.bazel  packet.go  packet_conn.go  path.go  reply_pather.go
pkg/snet/path/: BUILD.bazel  fabrid.go  onehop.go  path.go  scion.go
private/app/path/: BUILD.bazel  path.go
private/env/: env.go
private/path/combinator/: BUILD.bazel  fabrid_accumulator.go  graph.go
private/path/fabridquery/: BUILD.bazel  matchlist.go  matchlist_test.go  parser.go  parser_test.go  query.go  query_test.go
private/path/pathpol/: sequence.go
private/topology/: interface.go  reload.go  servicetype.go  servicetype_test.go  topology.go
private/topology/json/: json.go
private/underlay/conn/: conn.go
proto/control_plane/experimental/v1/: BUILD.bazel  fabrid.proto  fabrid_extensions.proto
proto/control_plane/v1/: seg_extensions.proto
proto/daemon/v1/: BUILD.bazel  daemon.proto
router/: BUILD.bazel  connector.go  dataplane.go  dataplane_internal_test.go  dataplane_test.go  export_test.go
router/cmd/router/: main.go
router/config/: config.go
router/control/: BUILD.bazel  conf.go  drkey.go  fetcher.go
scion/cmd/scion/: BUILD.bazel  fabrid.go  helia.go  main.go  ping.go
scion/fabrid/: BUILD.bazel  config.go  fabrid.go
scion/helia/: BUILD.bazel  helia.go  util.go
scion/ping/: ping.go
tools/: topogen.py
tools/end2end/: BUILD.bazel  main.go
tools/end2end_integration/: main.go
tools/fabrid/: BUILD.bazel  main.go
tools/helia/: BUILD.bazel  main.go
tools/integration/: binary.go  docker.go  integration.go
tools/integration/integrationlib/: common.go
tools/topology/: common.py  config.py  go.py  supervisor.py  topo.py
tools/wireshark/: scion.lua
topology/: long.topo
