load("//tools/lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

scion_go_binary(
    name = "heliagate",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/heliagate",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/experimental/heliagate/config:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//private/app:go_default_library",
        "//private/app/launcher:go_default_library",
        "//private/topology:go_default_library",
        "//heliagate/processing:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ]
)
