load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "processing.go",
        "processor.go",
    ],
    importpath = "github.com/scionproto/scion/heliagate/processing",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/experimental/heliagate:go_default_library",
        "//pkg/experimental/heliagate/config:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/slayers:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//private/topology:go_default_library",
        "//private/app:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@org_golang_x_net//ipv4:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",

    ]
)
