load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "processing.go",
        "processor.go",
    ],
    importpath = "github.com/scionproto/scion/heliagate/processing",
    visibility = ["//visibility:public"],
    deps = [
        "//heliagate/storage:go_default_library",
        "//pkg/experimental/helia:go_default_library",
        "//pkg/experimental/heliagate:go_default_library",
        "//pkg/experimental/heliagate/config:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/daemon:go_default_library",
        "//pkg/snet:go_default_library",
        "//pkg/sock/reliable:go_default_library",
        "//pkg/scrypto:go_default_library",
        "//pkg/slayers:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//private/topology:go_default_library",
        "//private/app:go_default_library",
        "//private/app/path:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@org_golang_x_net//ipv4:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",

    ]
)
