load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["storage.go"],
    importpath = "github.com/scionproto/scion/heliagate/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/experimental/helia:go_default_library",
        "//pkg/log:go_default_library",
    ],
)
