load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fabrid.go"],
    importpath = "github.com/scionproto/scion/pkg/experimental/fabrid/common",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/daemon:go_default_library",
        "//pkg/daemon/helper:go_default_library",
        "//pkg/drkey:go_default_library",
        "//pkg/drkey/specific:go_default_library",
        "//pkg/experimental/fabrid:go_default_library",
        "//pkg/experimental/fabrid/crypto:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/control_plane:go_default_library",
        "//pkg/slayers:go_default_library",
        "//pkg/slayers/extension:go_default_library",
        "//pkg/snet:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
